--- a/panel.html
+++ b/panel.html
@@ -9,6 +9,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--font awesome-->
@@ -24,8 +25,13 @@
 <body>
 
     <div class="bg-panel-superior">
-        <div class="container d-flex">
-            <div class="w-25">
+        <div class="container-fluid d-flex">
+            <div class="w-50">
+                <a href="https://www.itesca.edu.mx/" target="_blank" class="link">
+                    <label class="marca-awa">
+                        <img src="img/favicon.png" style="width:30px;">ITESCA
+                    </label>
+                </a>
                 <label class="click iconos-superior">
                     <span>
                         <i class="fas fa-home"></i>
@@ -72,8 +78,14 @@
         </div>
     </div>
 
-    <div class="container mt-5">
+    <div class="container mt-2">
         <div class="row">
+
+            <div class="col-12 d-flex justify-content-end">
+                <span>
+                    <i id="ayudaPanel" class="fas fa-info-circle click" style="font-size: 30px;"></i>
+                </span>
+            </div>
 
             <div class="col-12 mb-3">
                 <div class="text-center">
