--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--font awesome-->
@@ -19,7 +20,8 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-10 col-md-8 col-xl-6 fondo text-center mt-5 sombra border rounded mx-auto">
-                <div class="h5 mt-5 m-0 p-0">Bienvenido a</div>
+                <img src="img/logo_ITESCA.png" style="width: 250px;" class="mt-2">
+                <div class="h5 mt-2 m-0 p-0">Bienvenido a</div>
                 <div class="display-3 m-0 p-0 border-top border-bottom border-dark">Academias</div>
                 <div id="nominaC" class="input-group mt-5 mb-3 border rounded-pill bg-white">
                     <div class="input-group-prepend">
