--- a/planTrabajo.html
+++ b/planTrabajo.html
@@ -76,6 +76,15 @@
             </div>
         </div>
 
+        <div class="d-flex justify-content-center align-items-center" id="buscarPlan">
+            <div class="form-inline mb-2">
+                <label class="form-label text-input mr-3">Busqueda del plan</label>
+                <input id="planSeleccionado" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaDePlanes">
+                <datalist id="listaDePlanes">
+                </datalist>
+            </div>
+        </div>
+
         <div id="alertBusqueda"></div>
 
         <div class="mb-3 d-flex justify-content-around">
