--- a/Carrera.html
+++ b/Carrera.html
@@ -69,6 +69,7 @@
     </div>
 
     <div class="container">
+        <div id="alerta" class="container text-center h1"></div>
         <img id="img-portada" src="img/portada.png" class="portada img-fluid">
         <div class="d-flex justify-content-end mr-3">
             <label for="foto" class="img-fluid">
