crear/editar carrera

--- a/Carrera.html
+++ b/Carrera.html
@@ -68,12 +68,16 @@
         </div>
     </div>
 
+    <div class="container mb-5 d-flex" id="busquedaCarreras">
+
+    </div>
+
     <div class="container">
         <div id="alerta" class="container text-center h1"></div>
         <img id="img-portada" src="img/portada.png" class="portada img-fluid">
         <div class="d-flex justify-content-end mr-3">
             <label for="foto" class="img-fluid">
-                <img src="img/IconAgregar.png" class="add"/>
+                <img src="img/IconAgregar.png" class="add" />
             </label>
             <input name="foto" id="foto" type="file" accept="image/*" hidden />
         </div>
