--- a/Carrera.html
+++ b/Carrera.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--font awesome-->
@@ -13,7 +14,6 @@
     <link rel="stylesheet" href="css/banner.css">
     <link rel="stylesheet" href="css/carrera.css">
     <link rel="stylesheet" href="css/formulario.css">
-
     <title>Academias</title>
 </head>
 
@@ -70,6 +70,12 @@
 
     <div class="container mb-5 d-flex" id="busquedaCarreras">
 
+    </div>
+
+    <div class="col-12 d-flex justify-content-end">
+        <span>
+            <i id="ayudaCarrera" class="fas fa-info-circle click" style="font-size: 30px;"></i>
+        </span>
     </div>
 
     <div class="container">
