--- a/Carrera.html
+++ b/Carrera.html
@@ -57,7 +57,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb sin d-flex align-items-center">
                     <li class="breadcrumb-item">
-                        <a href="#">Inicio</a>
+                        <a href="/Academias/panel.html">Inicio</a>
                     </li>
                     <li id="accion" class="breadcrumb-item"></li>
                     <li class="breadcrumb-item active">
