--- a/acta.html
+++ b/acta.html
@@ -19,9 +19,14 @@
 <body>
 
     <div class="bg-panel-superior">
-        <div class="container d-flex">
-            <div class="w-25">
-                <label class="click iconos-superior">
+        <div class="container-fluid d-flex">
+            <div class="w-50">
+                <a href="https://www.itesca.edu.mx/" target="_blank" class="link">
+                    <label class="marca-awa">
+                        <img src="img/favicon.png" style="width:30px;">ITESCA
+                    </label>
+                </a>
+                <label class="click iconos-superior" id="inicio">
                     <span>
                         <i class="fas fa-home"></i>
                     </span>
@@ -35,7 +40,7 @@
                 </label>
             </div>
             <div class="d-flex justify-content-end w-75">
-                <label class="click iconos-superior ml-3">
+                <label class="click iconos-superior ml-3" id="Cerrar">
                     <span>
                         <i class="fas fa-sign-out-alt"></i>
                     </span>
@@ -48,18 +53,23 @@
     <div class="bg-menu-principal">
         <div class="container">
             <nav aria-label="breadcrumb">
-                <ol class="breadcrumb sin d-flex align-items-center">
-                    <li class="breadcrumb-item">
-                        <a href="#">Inicio</a>
-                    </li>
-                    <li id="accion" class="breadcrumb-item"></li>
-                    <li class="breadcrumb-item active">
-                        <label class="text-menu">Acta</label>
-                    </li>
-                </ol>
+                <ol class="breadcrumb sin d-flex align-items-center" id="pan"></ol>
             </nav>
         </div>
     </div>
+
+    <div class="container mb-3">
+        <div class="d-flex justify-content-center align-items-center">
+            <div class="form-inline mb-2">
+                <label class="form-label text-input mr-3">Busqueda por nombre/clave</label>
+                <input id="academiaSeleccionada2" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaAcademias">
+                <datalist id="listaAcademias">
+                </datalist>
+            </div>
+        </div>
+    </div>
+
+    <div id="alertBusqueda"></div>
 
     <div class="container">
         <div class="row">
@@ -103,46 +113,49 @@
             Aprobado el Orden del Día, se procede a la revisión de acuerdos de la minuta anterior bajo el siguiente:
         </div>
 
-        <div class="mt-2 font-weight-bold text-center h2">SEGUIMIENTO DE ACUERDOS ANTERIORES</div>
-        <div class="ml-3 mr-3 mt-3 mb-3">
-            <div class="row">
-                <div class="col-3 bg-input text-center h4 font-weight-bold border border-dark">
-                    <div class="w-100 h-100 d-flex justify-content-center align-items-center">ACUERDO</div>
-                </div>
-                <div class="col-3 bg-input text-center h4 font-weight-bold border border-dark">
-                    <div class="w-100 h-100 d-flex justify-content-center align-items-center">RESPONSABLE</div>
-                </div>
-                <div class="col-3 bg-input text-center h4 font-weight-bold border border-dark">
-                    <div class="w-100 h-100 d-flex justify-content-center align-items-center">FECHA DE CUMPLIMIENTO</div>
-                </div>
-                <div class="col-3 bg-input text-center h4 font-weight-bold border border-dark">
-                    <div class="w-100 h-100 d-flex justify-content-center align-items-center">AVANCE</div>
-                </div>
-                <div class="col-3 bg-input border border-dark acuerdo">
-                    <div class="text-justify">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, at vel! Repellat ipsa expedita sed sint facere eos, quia aliquid, voluptatem cum ratione ducimus aspernatur quos perspiciatis, totam ea porro? Ducimus ipsum provident, dolore veniam atque
-                        delectus, illum, vero nemo doloremque quae impedit laudantium necessitatibus aliquam libero sunt veritatis. Ut sit dicta provident nihil dolores, expedita voluptatem quasi fugit dolor? Nemo delectus excepturi quae facilis ex suscipit
-                        commodi nisi consequatur ad! Ipsam voluptatum ratione esse consequuntur laboriosam exercitationem laborum modi eos veniam quae facere provident ut, cumque, porro distinctio! Illum, consectetur ad provident maiores voluptas rerum.
-                        Fugit nam in ut!
+        <div id="anteriores">
+            <div class="mt-2 font-weight-bold text-center h2">SEGUIMIENTO DE ACUERDOS ANTERIORES</div>
+            <div class="ml-3 mr-3 mt-3 mb-3">
+                <div class="row">
+                    <div class="col-3 bg-input text-center h4 font-weight-bold border border-dark">
+                        <div class="w-100 h-100 d-flex justify-content-center align-items-center">ACUERDO</div>
                     </div>
-                </div>
-                <div class="col-3 bg-input border border-dark acuerdo">
-                    <div class="text-justify">
-                        <ul>
-                            <li>Cielo</li>
-                            <li>Yañez</li>
-                            <li>Cristy</li>
-                        </ul>
+                    <div class="col-3 bg-input text-center h4 font-weight-bold border border-dark">
+                        <div class="w-100 h-100 d-flex justify-content-center align-items-center">RESPONSABLE</div>
                     </div>
-                </div>
-                <div class="col-3 bg-input border border-dark acuerdo">
-                    <div class="text-justify">
-                        10 Enero, 2022
+                    <div class="col-3 bg-input text-center h4 font-weight-bold border border-dark">
+                        <div class="w-100 h-100 d-flex justify-content-center align-items-center">FECHA DE CUMPLIMIENTO
+                        </div>
                     </div>
-                </div>
-                <div class="col-3 bg-input border border-dark acuerdo">
-                    <div class="text-justify">
-                        10%
+                    <div class="col-3 bg-input text-center h4 font-weight-bold border border-dark">
+                        <div class="w-100 h-100 d-flex justify-content-center align-items-center">AVANCE</div>
+                    </div>
+                    <div class="col-3 bg-input border border-dark acuerdo">
+                        <div class="text-justify">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, at vel! Repellat ipsa expedita sed sint facere eos, quia aliquid, voluptatem cum ratione ducimus aspernatur quos perspiciatis, totam ea porro? Ducimus ipsum provident, dolore veniam atque
+                            delectus, illum, vero nemo doloremque quae impedit laudantium necessitatibus aliquam libero sunt veritatis. Ut sit dicta provident nihil dolores, expedita voluptatem quasi fugit dolor? Nemo delectus excepturi quae facilis ex
+                            suscipit commodi nisi consequatur ad! Ipsam voluptatum ratione esse consequuntur laboriosam exercitationem laborum modi eos veniam quae facere provident ut, cumque, porro distinctio! Illum, consectetur ad provident maiores
+                            voluptas rerum. Fugit nam in ut!
+                        </div>
+                    </div>
+                    <div class="col-3 bg-input border border-dark acuerdo">
+                        <div class="text-justify">
+                            <ul>
+                                <li>Cielo</li>
+                                <li>Yañez</li>
+                                <li>Cristy</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-3 bg-input border border-dark acuerdo">
+                        <div class="text-justify">
+                            10 Enero, 2022
+                        </div>
+                    </div>
+                    <div class="col-3 bg-input border border-dark acuerdo">
+                        <div class="text-justify">
+                            10%
+                        </div>
                     </div>
                 </div>
             </div>
@@ -150,7 +163,7 @@
 
         <div class="mt-2 ml-2 mr-2 font-weight-bold text-center h2">
             ACUERDOS DE REUNIÓN
-            <input type="button" value="Agregar" class="btn bg-btn-aplicar agregar">
+            <input type="button" value="Agregar" id="nuevoAcuerdo" class="btn bg-btn-aplicar agregar">
         </div>
         <div class="ml-3 mr-3 mt-3 mb-3">
             <div class="row">
@@ -161,42 +174,12 @@
                     <div class="w-100 h-100 d-flex justify-content-center align-items-center">RESPONSABLE</div>
                 </div>
                 <div class="col-2 bg-input text-center h4 font-weight-bold border border-dark">
-                    <div class="w-100 h-100 d-flex justify-content-center align-items-center">FECHA DE CUMPLIMIENTO</div>
-                </div>
-
-                <div class="col-6 acuerdo border border-dark">
-                    <textarea name="acuerdo_1" id="acuerdo_1" rows="10" cols="80"></textarea>
-                </div>
-                <div class="col-4 acuerdo border border-dark">
-                    <div class="d-flex mt-1">
-                        <label for="busqueda_1" class="text-input ">Nómina/Nombre</label>
-                        <input type="search" name="busqueda_1" id="busqueda_1" class="ml-2 form-control bg-input" list="busqueda_1_lista">
-                        <datalist id="busqueda_1_lista">
-                            <option value="Camaro">
-                        </datalist>
-                        <span class="click ml-2 d-flex align-items-center">
-                            <i class="fas fa-plus-circle"></i>
-                        </span>
-                    </div>
-                    <div id="agregados" class="text-input">
-                        <ul>
-                            <li>
-                                <div class="row">
-                                    <div class="col-10">
-                                        Cielo Luz Elena Llamas Servin
-                                    </div>
-                                    <div class="col-2">
-                                        <span class="click ml-auto"><i class="fas fa-user-minus"></i></span>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
+                    <div class="w-100 h-100 d-flex justify-content-center align-items-center">FECHA DE CUMPLIMIENTO
                     </div>
                 </div>
-                <div class="col-2 acuerdo border border-dark">
-                    <input type="datetime-local" class="form-control bg-input mt-2">
-                </div>
+            </div>
 
+            <div id="acuerdos">
             </div>
         </div>
 
@@ -260,16 +243,81 @@
 
     </div>
 
-    <!--Ajax-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <div class="modal fade" id="editor" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Acuerdo No.<span id="tituloModal"></span></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <textarea name="ev" id="ev" cols="30" rows="10"></textarea>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="cancelarEvaluacion">
+                        Cancelar
+                    </button>
+                    <button type="button" class="btn btn-primary" id="aplicarEvaluacion">
+                        Aplicar
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="responsablesModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Responsables No.<span id="tituloModalR"></span></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="d-flex mt-1">
+                        <label for="busqueda_1" class="text-input">Nómina/Nombre</label>
+                        <input type="search" name="busqueda_1" id="busqueda_1" class="ml-2 form-control bg-input" list="busqueda_1_lista" />
+                        <datalist id="busqueda_1_lista"></datalist>
+                        <span class="ml-2 d-flex align-items-center">
+                            <i name="pasarALista" class="fas fa-plus-circle click"></i>
+                        </span>
+                    </div>
+                    <div id="alerResponsable"></div>
+                    <div>
+                        <ul id="agregados"></ul>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="d-flex justify-content-around w-100">
+                        <input type="button" value="Todos" class="btn btn-success" id="TodosLosDocentes">
+                        <div>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                Cancelar
+                            </button>
+                            <button type="button" class="btn btn-primary" id="aplicarResponsables">
+                                Aplicar
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="modales"></div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin=" anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- CKEditor -->
     <script src="//cdn.ckeditor.com/4.17.1/standard/ckeditor.js"></script>
     <!-- My Script -->
+    <script src="js/validaciones.js"></script>
     <script src="js/acta.js"></script>
 
 </body>
