--- a/acta.html
+++ b/acta.html
@@ -71,6 +71,11 @@
 
     <div id="alertBusqueda"></div>
 
+    <div class="mb-3 d-flex justify-content-around">
+        <input name="preview" type="button" value="Vista Previa" class="btn btn-secondary btn-lg">
+        <input name="Crear" type="button" value="Generar PDF" class="btn btn-success btn-lg">
+    </div>
+
     <div class="container">
         <div class="row">
             <div class="col-3 border border-dark">
@@ -241,6 +246,11 @@
             <textarea class="mb-5" name="obs" id="obs" rows="10" cols="80"></textarea>
         </div>
 
+    </div>
+
+    <div class="mb-3 d-flex justify-content-around">
+        <input name="preview" type="button" value="Vista Previa" class="btn btn-secondary btn-lg">
+        <input name="Crear" type="button" value="Generar PDF" class="btn btn-success btn-lg">
     </div>
 
     <div class="modal fade" id="editor" tabindex="-1" role="dialog">
