--- a/acta.html
+++ b/acta.html
@@ -216,24 +216,8 @@
                 <div class="col-4 bg-input text-center h4 font-weight-bold border border-dark">
                     <div class="w-100 h-100 d-flex justify-content-center align-items-center">FIRMA</div>
                 </div>
-
-                <div class="col-4 border border-dark acuerdo">
-                    <div class="w-100 h-100">Cielo Luz Elena Llamas Servin</div>
-                </div>
-                <div class="col-4 border border-dark acuerdo">
-                    <ul>
-                        <li>M1</li>
-                        <li>M2</li>
-                        <li>M3</li>
-                    </ul>
-                </div>
-                <div class="col-4 border border-dark acuerdo">
-                    <div class="d-flex flex-column mt-2 mb-2 justify-content-center align-items-center">
-                        <input type="button" value="Asistio" class="bg-input bg-btn-aplicar hover">
-                        <input type="button" value="No asistio" class="bg-input bg-btn-aplicar mt-2 mb-2 hover">
-                        <input type="button" value="Justificado" class="bg-input bg-btn-aplicar hover">
-                    </div>
-                </div>
+            </div>
+            <div id="asistencia">
 
             </div>
         </div>
