--- a/acta.html
+++ b/acta.html
@@ -59,6 +59,11 @@
     </div>
 
     <div class="container mb-3">
+        <div class="col-12 d-flex justify-content-end">
+            <span>
+                <i id="ayudaActa" class="fas fa-info-circle click" style="font-size: 30px;"></i>
+            </span>
+        </div>
         <div class="d-flex justify-content-center align-items-center">
             <div class="form-inline mb-2">
                 <label class="form-label text-input mr-3">Busqueda por nombre/clave</label>
