--- a/acta.html
+++ b/acta.html
@@ -94,7 +94,7 @@
         <div class="d-flex mt-2 justify-content-end">
             <div class="form-inline">
                 <label class="text-input">Acta No.</label>
-                <input type="text" class="form-control no bg-input ml-2" disabled>
+                <input type="text" id="NoActa" class="form-control no bg-input ml-2" disabled>
             </div>
         </div>
         <div class="mt-2 text-input row ml-2 mr-2">
@@ -108,13 +108,13 @@
             <input type="number" class="form-control bg-input hora ml-2 mr-2">
             <p>reunidos</p>
             <input type="text" class="form-control bg-input lugar ml-2 mr-2">
-            <p>Cajeme, los maestros miembros de la academia de</p>
-            <input type="text" class="form-control bg-input ancho ml-2 mr-2" disabled>
+            <p>, los maestros miembros de la academia de</p>
+            <input name="attr" type="text" class="form-control bg-input ancho ml-2 mr-2" disabled>
             <p>cuya lista se anexa a la presente acta; se inicia la reunión, bajo </p>
             <p>la presidencia de</p>
-            <input type="text" class="form-control bg-input ancho ml-2 mr-2" disabled>
+            <input name="attr" type="text" class="form-control bg-input ancho ml-2 mr-2" disabled>
             <p>, auxiliado en la secretaria por</p>
-            <input type="text" class="form-control bg-input ancho ml-2 mr-2" disabled>
+            <input name="attr" type="text" class="form-control bg-input ancho ml-2 mr-2" disabled>
             <p>acuerdo con el siguiente:</p>
         </div>
         <div class="mt-2 font-weight-bold text-center h2">Orden del día</div>
