--- a/panel.html
+++ b/panel.html
@@ -90,103 +90,22 @@
                 <div class="d-flex d-inline justify-content-center">
                     <div class="form-inline mr-2">
                         <label>Ver desde</label>
-                        <input type="datetime-local" class="form-control bg-input ml-2">
+                        <input type="datetime-local" id="fechebase_1" class="form-control bg-input ml-2">
                     </div>
                     <div class="form-inline">
                         <label>Hasta</label>
-                        <input type="datetime-local" class="form-control bg-input ml-2">
+                        <input type="datetime-local" id="fechebase_2" class="form-control bg-input ml-2">
                     </div>
-                </div>
-                <div class="form-check mt-1 text-center">
-                    <input class="form-check-input bg-input" type="checkbox" id="defaultCheck1">
-                    <label class="form-check-label" for="defaultCheck1">
-                        Ver juntas pasadas
-                    </label>
                 </div>
                 <div class="text-center mt-2">
-                    <input type="button" value="Aplicar" class="btn bg-btn-aplicar">
+                    <input type="button" value="Aplicar" id="FiltrarFechas" class="btn bg-btn-aplicar">
                 </div>
             </div>
 
-            <div class="col-4">
+            <div class="col-8">
 
-                <div name="fecha" class="d-flex click mb-4">
-                    <label name="dia" class="click">24</label>
-                    <div class="d-flex flex-column ml-2 click border-top border-bottom border-dark">
-                        <label class="p-0 m-0 click">Enero 2022, 5:00pm</label>
-                        <label class="p-0 m-0 click">Academia Base Ejemplo Uno</label>
-                        <label class="p-0 m-0 click text-muted">Reunión semanal para asuntos de interés.</label>
-                    </div>
+                <div class="row" id="fechas">
                 </div>
-
-                <div name="fecha" class="d-flex click mb-4">
-                    <label name="dia" class="click">24</label>
-                    <div class="d-flex flex-column ml-2 click border-top border-bottom border-dark">
-                        <label class="p-0 m-0 click">Enero 2022, 5:00pm</label>
-                        <label class="p-0 m-0 click">Academia Base Ejemplo Uno</label>
-                        <label class="p-0 m-0 click text-muted">Reunión semanal para asuntos de interés.</label>
-                    </div>
-                </div>
-
-                <div name="fecha" class="d-flex click mb-4">
-                    <label name="dia" class="click">24</label>
-                    <div class="d-flex flex-column ml-2 click border-top border-bottom border-dark">
-                        <label class="p-0 m-0 click">Enero 2022, 5:00pm</label>
-                        <label class="p-0 m-0 click">Academia Base Ejemplo Uno</label>
-                        <label class="p-0 m-0 click text-muted">Reunión semanal para asuntos de interés.</label>
-                    </div>
-                </div>
-
-                <div name="fecha" class="d-flex click mb-4">
-                    <label name="dia" class="click">24</label>
-                    <div class="d-flex flex-column ml-2 click border-top border-bottom border-dark">
-                        <label class="p-0 m-0 click">Enero 2022, 5:00pm</label>
-                        <label class="p-0 m-0 click">Academia Base Ejemplo Uno</label>
-                        <label class="p-0 m-0 click text-muted">Reunión semanal para asuntos de interés.</label>
-                    </div>
-                </div>
-
-
-            </div>
-
-            <div class="col-4">
-
-                <div name="fecha" class="d-flex click mb-4">
-                    <label name="dia" class="click">24</label>
-                    <div class="d-flex flex-column ml-2 click border-top border-bottom border-dark">
-                        <label class="p-0 m-0 click">Enero 2022, 5:00pm</label>
-                        <label class="p-0 m-0 click">Academia Base Ejemplo Uno</label>
-                        <label class="p-0 m-0 click text-muted">Reunión semanal para asuntos de interés.</label>
-                    </div>
-                </div>
-
-                <div name="fecha" class="d-flex click mb-4">
-                    <label name="dia" class="click">24</label>
-                    <div class="d-flex flex-column ml-2 click border-top border-bottom border-dark">
-                        <label class="p-0 m-0 click">Enero 2022, 5:00pm</label>
-                        <label class="p-0 m-0 click">Academia Base Ejemplo Uno</label>
-                        <label class="p-0 m-0 click text-muted">Reunión semanal para asuntos de interés.</label>
-                    </div>
-                </div>
-
-                <div name="fecha" class="d-flex click mb-4">
-                    <label name="dia" class="click">24</label>
-                    <div class="d-flex flex-column ml-2 click border-top border-bottom border-dark">
-                        <label class="p-0 m-0 click">Enero 2022, 5:00pm</label>
-                        <label class="p-0 m-0 click">Academia Base Ejemplo Uno</label>
-                        <label class="p-0 m-0 click text-muted">Reunión semanal para asuntos de interés.</label>
-                    </div>
-                </div>
-
-                <div name="fecha" class="d-flex click mb-4">
-                    <label name="dia" class="click">24</label>
-                    <div class="d-flex flex-column ml-2 click border-top border-bottom border-dark">
-                        <label class="p-0 m-0 click">Enero 2022, 5:00pm</label>
-                        <label class="p-0 m-0 click">Academia Base Ejemplo Uno</label>
-                        <label class="p-0 m-0 click text-muted">Reunión semanal para asuntos de interés.</label>
-                    </div>
-                </div>
-
 
             </div>
 
