--- a/Academia.html
+++ b/Academia.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--font awesome-->
@@ -19,9 +20,14 @@
 <body>
 
     <div class="bg-panel-superior">
-        <div class="container d-flex">
-            <div class="w-25">
-                <label class="click iconos-superior">
+        <div class="container-fluid d-flex">
+            <div class="w-50">
+                <a href="https://www.itesca.edu.mx/" target="_blank" class="link">
+                    <label class="marca-awa">
+                        <img src="img/favicon.png" style="width:30px;">ITESCA
+                    </label>
+                </a>
+                <label class="click iconos-superior" id="inicio">
                     <span>
                         <i class="fas fa-home"></i>
                     </span>
@@ -35,7 +41,7 @@
                 </label>
             </div>
             <div class="d-flex justify-content-end w-75">
-                <label class="click iconos-superior ml-3">
+                <label class="click iconos-superior ml-3" id="Cerrar">
                     <span>
                         <i class="fas fa-sign-out-alt"></i>
                     </span>
@@ -50,7 +56,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb sin d-flex align-items-center">
                     <li class="breadcrumb-item">
-                        <a href="#">Inicio</a>
+                        <a href="/Academias/panel.html">Inicio</a>
                     </li>
                     <li id="accion" class="breadcrumb-item"></li>
                     <li class="breadcrumb-item active">
@@ -62,10 +68,20 @@
     </div>
 
     <div class="container">
+
+        <div class="col-12 d-flex justify-content-end">
+            <span>
+                <i id="ayudaCarrera" class="fas fa-info-circle click" style="font-size: 30px;"></i>
+            </span>
+        </div>
+
+    </div>
+
+    <div class="container">
         <img id="img-portada" src="img/portada.png" class="portada img-fluid">
         <div class="d-flex justify-content-end mr-3">
             <label for="portada" class="img-fluid">
-                <img src="img/IconAgregar.png" class="add"/>
+                <img src="img/IconAgregar.png" class="add" />
             </label>
             <input name="portada" id="portada" type="file" accept="image/*" hidden />
         </div>
@@ -151,21 +167,23 @@
         <div id="pie" class="mt-5 mb-5"> </div>
 
         <div class="d-flex justify-content-around">
-            <input type="reset" value="Cancelar" class="btn bg-btn-aplicar">
-            <input type="submit" value="Guardar" class="btn bg-btn-aplicar">
+            <input id="cancelar" type="button" value="Cancelar" class="btn bg-btn-aplicar">
+            <input id="salvarCarrera" type="button" value="Guardar" class="btn btn-primary-c">
         </div>
 
     </div>
 
-    <!--Ajax-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <div id="modales"></div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin=" anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- My Script -->
+    <script src="js/validaciones.js"></script>
     <script src="js/Academia.js"></script>
+
 </body>
 
 </html>
