--- a/Carrera.html
+++ b/Carrera.html
@@ -72,10 +72,12 @@
 
     </div>
 
-    <div class="col-12 d-flex justify-content-end">
-        <span>
-            <i id="ayudaCarrera" class="fas fa-info-circle click" style="font-size: 30px;"></i>
-        </span>
+    <div class="container">
+        <div class="col-12 d-flex justify-content-end">
+            <span>
+                <i id="ayudaCarrera" class="fas fa-info-circle click" style="font-size: 30px;"></i>
+            </span>
+        </div>
     </div>
 
     <div class="container">
