--- a/Academia.html
+++ b/Academia.html
@@ -67,7 +67,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container mb-3">
 
         <div class="col-12 d-flex justify-content-end">
             <span>
@@ -78,6 +78,7 @@
     </div>
 
     <div class="container">
+        <div id="alerta" class="container text-center h1"></div>
         <img id="img-portada" src="img/portada.png" class="portada img-fluid">
         <div class="d-flex justify-content-end mr-3">
             <label for="portada" class="img-fluid">
@@ -88,71 +89,31 @@
     </div>
 
     <div class="container">
-        <div class="row">
-            <div class="col-3"></div>
-            <div class="col-6">
+        <div class="row mb-3">
+            <div class="col-6 mx-auto">
                 <div class="form-group row">
-                    <label class="col-2 col-form-label text-input">Nombre</label>
+                    <label class="col-2 col-form-label text-input">Clave</label>
                     <div class="col-10">
-                        <input name="nombre" type="text" class="form-control text-input bg-input rounded-pill">
-                        <div name="nombre" class="invalid-tooltip"></div>
+                        <input id="claveA" name="claveA" type="text" class="form-control text-input bg-input rounded-pill">
+                        <div name="claveA" class="invalid-tooltip"></div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-3"></div>
-            <div class="col-6">
+        <div class="row mb-3">
+            <div class="col-6 mx-auto">
                 <div class="form-group row">
-                    <label class="col-2 col-form-label text-input">Clave</label>
+                    <label class="col-2 col-form-label text-input">Nombre</label>
                     <div class="col-10">
-                        <input name="clave" type="text" class="form-control text-input bg-input rounded-pill">
-                        <div name="clave" class="invalid-tooltip"></div>
+                        <input id="nombre" name="nombre" type="text" class="form-control text-input bg-input rounded-pill">
+                        <div name="nombre" class="invalid-tooltip"></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="container mb-5 border-bottom border-dark">
-        <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
-            <label class="btn btn-secondary active opciones text-input">
-                <input type="radio" name="options" id="option1" autocomplete="off"> Presidente
-            </label>
-            <label class="btn btn-secondary opciones text-input">
-                <input type="radio" name="options" id="option2" autocomplete="off"> Secretario
-            </label>
-            <label class="btn btn-secondary opciones text-input">
-                <input type="radio" name="options" id="option3" autocomplete="off"> Agregar miembro
-            </label>
-            <label class="btn btn-secondary opciones text-input">
-                <input type="radio" name="options" id="option3" autocomplete="off"> Eliminar miembro
-            </label>
-        </div>
-        <div class="mt-3 d-flex flex-column justify-content-center align-items-center">
-            <img src="img/IconLog.png" class="img-fluid foto-opcional">
-            <div class="form-inline mt-2 d-flex justify-content-around">
-                <label class="form-label text-input ancho">Actual</label>
-                <input type="text" class="form-control text-input bg-input rounded-pill" disabled>
-            </div>
-            <div class="form-inline mt-2">
-                <label class="form-label text-input ancho">Nuevo</label>
-                <input type="text" class="form-control text-input bg-input rounded-pill" disabled>
-            </div>
-            <div class="form-inline mt-2">
-                <label class="form-label text-input ancho">Nomina</label>
-                <input type="text" class="form-control text-input bg-input rounded-pill" disabled>
-            </div>
-            <div class="form-inline mt-2">
-                <label class="form-label text-input ancho">Busqueda por nombre/nomina</label>
-                <input type="search" class="form-control text-input bg-input rounded-pill" list="listamodelos">
-                <datalist id="listamodelos">
-                    <option value="Cielo">
-                    <option value="Yañez">
-                    <option value="Cristy">
-                </datalist>
-            </div>
-        </div>
+    <div class="container mb-5 border-bottom border-dark" id="panelO">
     </div>
 
     <div class="container mb-5">
@@ -168,7 +129,7 @@
 
         <div class="d-flex justify-content-around">
             <input id="cancelar" type="button" value="Cancelar" class="btn bg-btn-aplicar">
-            <input id="salvarCarrera" type="button" value="Guardar" class="btn btn-primary-c">
+            <input id="SalvarAcademia" type="button" value="Guardar" class="btn btn-primary-c">
         </div>
 
     </div>
