--- a/Academia.html
+++ b/Academia.html
@@ -71,7 +71,7 @@
 
         <div class="col-12 d-flex justify-content-end">
             <span>
-                <i id="ayudaCarrera" class="fas fa-info-circle click" style="font-size: 30px;"></i>
+                <i id="ayudaAcademia" class="fas fa-info-circle click" style="font-size: 30px;"></i>
             </span>
         </div>
 
@@ -81,10 +81,10 @@
         <div id="alerta" class="container text-center h1"></div>
         <img id="img-portada" src="img/portada.png" class="portada img-fluid">
         <div class="d-flex justify-content-end mr-3">
-            <label for="portada" class="img-fluid">
+            <label for="foto" class="img-fluid">
                 <img src="img/IconAgregar.png" class="add" />
             </label>
-            <input name="portada" id="portada" type="file" accept="image/*" hidden />
+            <input name="foto" id="foto" type="file" accept="image/*" hidden />
         </div>
     </div>
 
