guardado por susto

--- a/Academia.html
+++ b/Academia.html
@@ -67,6 +67,10 @@
         </div>
     </div>
 
+    <div class="container mb-5 d-flex" id="BusquedasAcademias">
+
+    </div>
+
     <div class="container mb-3">
 
         <div class="col-12 d-flex justify-content-end">
