--- a/Carrera.html
+++ b/Carrera.html
@@ -68,16 +68,18 @@
         </div>
     </div>
 
-    <div class="container mb-5 d-flex" id="busquedaCarreras">
+    <div class="container mb-2 d-flex" id="busquedaCarreras">
 
     </div>
 
-    <div class="container">
+    <div class="container mb-3">
+
         <div class="col-12 d-flex justify-content-end">
             <span>
                 <i id="ayudaCarrera" class="fas fa-info-circle click" style="font-size: 30px;"></i>
             </span>
         </div>
+
     </div>
 
     <div class="container">
