Ev doc creado pdf

--- a/evDocenteXPre.html
+++ b/evDocenteXPre.html
@@ -87,7 +87,7 @@
             <div class="mt-2 bg-dark text-input text-white font-weight-bold w-100 text-center">DATOS GENERALES</div>
             <div class="col-3 bg-input text-input border border-dark d-flex justify-content-end align-items-center">Fecha de Elaboración:</div>
             <div class="col-3 text-input border border-dark d-flex justify-content-end align-items-center">
-                <input type="datetime-local" class="form-control text-input">
+                <input type="date" id="elaborada" class="form-control text-input">
             </div>
             <div class="col-3 bg-input text-input border border-dark d-flex justify-content-end align-items-center">Periodo a evaluar:</div>
             <div class="col-3 text-input border border-dark d-flex justify-content-end align-items-center">
