--- a/evSecretarioXCo.html
+++ b/evSecretarioXCo.html
@@ -59,7 +59,7 @@
                     </li>
                     <li id="accion" class="breadcrumb-item"></li>
                     <li class="breadcrumb-item active">
-                        <label class="text-menu">Evaluación al Presidente</label>
+                        <label class="text-menu">Evaluación al Secretario</label>
                     </li>
                 </ol>
             </nav>
@@ -80,7 +80,7 @@
                 <img src="img/logo_ITESCA.png" class="img-fluid">
             </div>
             <div class="col-9 border border-dark d-flex flex-column justify-content-center align-items-center">
-                <div class="h1 text-center">EVALUACIÓN AL PRESIDENTE DE ACADEMIA POR EL COORDINADOR</div>
+                <div class="h1 text-center">EVALUACIÓN AL SECRETARIO DE ACADEMIA POR EL COORDINADOR</div>
                 <div class="h4 text-center">F02PSA01.01</div>
             </div>
             <div class="mt-2 bg-dark text-input text-white font-weight-bold w-100 text-center">DATOS GENERALES</div>
@@ -92,7 +92,7 @@
             <div class="col-3 text-input border border-dark d-flex justify-content-end align-items-center">
                 <input type="text" disabled class="form-control text-input" name="info">
             </div>
-            <div class="col-3 bg-input text-input border border-dark d-flex justify-content-end align-items-center">Presidente evaluado:</div>
+            <div class="col-3 bg-input text-input border border-dark d-flex justify-content-end align-items-center">Secretario evaluado:</div>
             <div class="col-9 text-input border border-dark d-flex justify-content-end align-items-center">
                 <input id="preSel" type="search" class="form-control text-input bg-input mx-auto" list="listaDoc">
                 <datalist id="listaDoc">
@@ -125,7 +125,7 @@
 
         <div class="row">
             <div class="col-2 border border-dark text-center">
-                <label class="text-justify">Asistencia a reuniones de presidentes de academia</label>
+                <label class="text-justify">Asistencia a reuniones de Secretarioss de academia</label>
             </div>
             <div class="col-6 border border-dark text-center">
                 <div class="row h-100">
@@ -503,7 +503,7 @@
             </div>
 
             <div class="col-3 border border-dark text-justify">
-                Con base en el promedio obtenido, evalúe su recomendación de que continúe en funciones de presidente de academia
+                Con base en el promedio obtenido, evalúe su recomendación de que continúe en funciones de Secretario de academia
             </div>
             <div class="col-3 border border-dark">
                 <div class="form-check">
@@ -575,7 +575,7 @@
     <script src="//cdn.ckeditor.com/4.17.1/standard/ckeditor.js"></script>
     <!-- My Script -->
     <script src="js/validaciones.js"></script>
-    <script src="js/evPresidente.js"></script>
+    <script src="js/evSecretario.js"></script>
 
 </body>
 
