--- a/Docente.html
+++ b/Docente.html
@@ -145,6 +145,17 @@
 
             </div>
         </div>
+
+        <div id="materias">
+            <div class="form-group row">
+                <label class="col-3 col-form-label text-input text-right" for="claveR">Agregar Materias:</label>
+                <div class="col-9">
+                    <input name="nuevaMat" id="nuevaMat" type="text" class="form-control text-input bg-input rounded-pill">
+                </div>
+            </div>
+            <div id="areaMaterias"></div>
+        </div>
+
         <div class="d-flex justify-content-around mb-5" id="Creacion">
             <input name="cancelar" value="Cancelar" type="button" class="btn bg-btn-aplicar">
             <input id="registrar" type="button" value="Registrar" class="btn btn-primary-r">
