--- a/panel.html
+++ b/panel.html
@@ -126,6 +126,7 @@
     <!-- My Script -->
     <script src="js/validaciones.js"></script>
     <script src="js/panel.js"></script>
+    <script src="js/editarme.js"></script>
 
 </body>
 
