--- a/verCarrera.html
+++ b/verCarrera.html
@@ -28,7 +28,7 @@
                     </span>
                     Inicio
                 </label>
-                <label class="click iconos-superior ml-3">
+                <label id="Editarme" class="click iconos-superior ml-3">
                     <span>
                         <i class="fas fa-user"></i>
                     </span>
@@ -115,6 +115,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- My Script -->
     <script src="js/verCarrera.js"></script>
+    <script src="js/editarme.js"></script>
 
 </body>
 
