--- a/acta.html
+++ b/acta.html
@@ -33,7 +33,7 @@
                     </span>
                     Inicio
                 </label>
-                <label class="click iconos-superior ml-3">
+                <label id="Editarme" class="click iconos-superior ml-3">
                     <span>
                         <i class="fas fa-user"></i>
                     </span>
@@ -298,6 +298,7 @@
     <!-- My Script -->
     <script src="js/validaciones.js"></script>
     <script src="js/acta.js"></script>
+    <script src="js/editarme.js"></script>
 
 </body>
 
