--- a/evSecretarioXCo.html
+++ b/evSecretarioXCo.html
@@ -32,7 +32,7 @@
                     </span>
                     Inicio
                 </label>
-                <label class="click iconos-superior ml-3">
+                <label id="Editarme" class="click iconos-superior ml-3">
                     <span>
                         <i class="fas fa-user"></i>
                     </span>
@@ -576,6 +576,7 @@
     <!-- My Script -->
     <script src="js/validaciones.js"></script>
     <script src="js/evSecretario.js"></script>
+    <script src="js/editarme.js"></script>
 
 </body>
 
