--- a/planTrabajo.html
+++ b/planTrabajo.html
@@ -33,7 +33,7 @@
                     </span>
                     Inicio
                 </label>
-                <label class="click iconos-superior ml-3">
+                <label id="Editarme" class="click iconos-superior ml-3">
                     <span>
                         <i class="fas fa-user"></i>
                     </span>
@@ -483,6 +483,8 @@
     <!-- My Script -->
     <script src="js/validaciones.js"></script>
     <script src="js/planTrabajo.js"></script>
+    <script src="js/editarme.js"></script>
+
 </body>
 
 </html>
