--- a/verAcademia.html
+++ b/verAcademia.html
@@ -128,6 +128,9 @@
         <div class="h1">Miembros</div>
     </div>
 
+    <div class="container" id="Buscador">
+    </div>
+
     <div class="container mb-5">
         <div class="row" id="docentes"></div>
         <div id="pieDocentes"></div>
