--- a/verDocente.html
+++ b/verDocente.html
@@ -58,7 +58,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb sin d-flex align-items-center">
                     <li class="breadcrumb-item">
-                        <a href="#">Inicio</a>
+                        <a href="/Academias/panel.html">Inicio</a>
                     </li>
                     <li class="breadcrumb-item">
                         ver
