--- a/verAcademia.html
+++ b/verAcademia.html
@@ -56,7 +56,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb sin d-flex align-items-center">
                     <li class="breadcrumb-item">
-                        <a href="#">Inicio</a>
+                        <a href="/Academias/panel.html">Inicio</a>
                     </li>
                     <li class="breadcrumb-item">
                         ver
@@ -119,7 +119,7 @@
         <div class="h1">Reuniones</div>
     </div>
 
-    <div class="container  border-bottom border-dark mb-3">
+    <div class="container border-bottom border-dark mb-3">
         <div class="mb-3 row" id="fechas">
         </div>
     </div>
@@ -137,29 +137,21 @@
     </div>
 
     <div class="modal fade" id="verDoc" tabindex="-1" role="dialog">
-        <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
+                <div class="modal-header d-flex justify-content-center h1">
+                    <label id="titulo"></label>
+                </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-8 text-justify">
-                            <h1>Plan 1 de trabajo</h1>
-                            <h2>Subido por: <span id="subido">Anabel</span></h2>
-                            <h3>fecha: <span id="fecha">11/11/11</span></h3>
-                            <h4>Descripción:
-                                <span id="desc">
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus rem quasi officiis debitis, incidunt dolore?
-                                </span>
-                            </h4>
+                        <div class="col-4 d-flex justify-content-center align-items-center flex-column borde" id="docPadre">
                         </div>
-                        <div class="col-4">
-                            <img src="img/pdf.ico">
+                        <div class="col-8">
+                            <h4 class="text-center">Informacion ligada</h4>
+                            <div class="row" id="verEvidencia"></div>
+                            <div id="pieInfo"></div>
                         </div>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-success">Ver</button>
-                    <button type="button" class="btn btn-primary">Descargar</button>
                 </div>
             </div>
         </div>
