--- a/evDocenteXPre.html
+++ b/evDocenteXPre.html
@@ -394,7 +394,7 @@
                 Calificación final de Indicadores:
             </div>
             <div class="col-2 border border-dark">
-                <input type="text" id="calif" class="bg-input text-input form-control">
+                <input value="0" type="text" id="calif" disabled class="bg-input text-input form-control">
             </div>
 
             <div class="col-3 border border-dark text-justify">
