--- a/evSecretarioXCo.html
+++ b/evSecretarioXCo.html
@@ -499,7 +499,7 @@
                 Calificación final de Indicadores:
             </div>
             <div class="col-2 border border-dark">
-                <input type="text" id="calif" class="bg-input text-input form-control">
+                <input type="text" disabled id="calif" class="bg-input text-input form-control">
             </div>
 
             <div class="col-3 border border-dark text-justify">
