--- a/acta.html
+++ b/acta.html
@@ -67,7 +67,7 @@
         </div>
         <div class="d-flex justify-content-center align-items-center">
             <div class="form-inline mb-2">
-                <label class="form-label text-input mr-3">Busqueda por clave/nombre</label>
+                <label class="form-label text-input mr-3">Búsqueda por clave/nombre</label>
                 <input id="academiaSeleccionada2" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaAcademias">
                 <datalist id="listaAcademias">
                 </datalist>
@@ -77,7 +77,7 @@
 
     <div class="d-flex justify-content-center align-items-center" id="buscarActa">
         <div class="form-inline mb-2">
-            <label class="form-label text-input mr-3">Busqueda del acta</label>
+            <label class="form-label text-input mr-3">Búsqueda del acta</label>
             <input id="actaSeleccionada" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaDeActas">
             <datalist id="listaDeActas">
             </datalist>
