--- a/verAcademia.html
+++ b/verAcademia.html
@@ -73,7 +73,7 @@
     <div class="container mb-3">
         <div class="d-flex justify-content-center align-items-center">
             <div class="form-inline mb-2">
-                <label class="form-label text-input mr-3">Busqueda por clave/nombre</label>
+                <label class="form-label text-input mr-3">Búsqueda por clave/nombre</label>
                 <input id="AcaSel" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaAcademias">
                 <datalist id="listaAcademias">
                 </datalist>
@@ -148,7 +148,7 @@
                         <div class="col-4 d-flex justify-content-center align-items-center flex-column borde" id="docPadre">
                         </div>
                         <div class="col-8">
-                            <h4 class="text-center">Informacion ligada</h4>
+                            <h4 class="text-center">Información ligada</h4>
                             <div class="row" id="verEvidencia"></div>
                             <div id="pieInfo"></div>
                         </div>
