--- a/verDocente.html
+++ b/verDocente.html
@@ -74,7 +74,7 @@
     <div class="container mb-3">
         <div class="d-flex justify-content-center align-items-center">
             <div class="form-inline mb-2">
-                <label class="form-label text-input mr-3">Busqueda por nomina/nombre</label>
+                <label class="form-label text-input mr-3">Búsqueda por nómina/nombre</label>
                 <input id="DocenteSel" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaDocentes">
                 <datalist id="listaDocentes">
                 </datalist>
