--- a/evPresidenteXCo.html
+++ b/evPresidenteXCo.html
@@ -544,7 +544,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Evaluacion para el indicardor No.<span id="tituloModal"></span></h5>
+                    <h5 class="modal-title">Evaluación para el indicardor No.<span id="tituloModal"></span></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
