--- a/planTrabajo.html
+++ b/planTrabajo.html
@@ -69,7 +69,7 @@
 
         <div class="d-flex justify-content-center align-items-center">
             <div class="form-inline mb-2">
-                <label class="form-label text-input mr-3">Busqueda por nombre/clave</label>
+                <label class="form-label text-input mr-3">Búsqueda por nombre/clave</label>
                 <input id="academiaSeleccionada" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaAcademias">
                 <datalist id="listaAcademias">
                 </datalist>
@@ -78,7 +78,7 @@
 
         <div class="d-flex justify-content-center align-items-center" id="buscarPlan">
             <div class="form-inline mb-2">
-                <label class="form-label text-input mr-3">Busqueda del plan</label>
+                <label class="form-label text-input mr-3">Búsqueda del plan</label>
                 <input id="planSeleccionado" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaDePlanes">
                 <datalist id="listaDePlanes">
                 </datalist>
