--- a/verCarrera.html
+++ b/verCarrera.html
@@ -73,7 +73,7 @@
     <div class="container mb-3">
         <div class="d-flex justify-content-center align-items-center">
             <div class="form-inline mb-2">
-                <label class="form-label text-input mr-3">Busqueda por clave/nombre</label>
+                <label class="form-label text-input mr-3">Búsqueda por clave/nombre</label>
                 <input id="CarreraSel" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaCarreras">
                 <datalist id="listaCarreras">
                 </datalist>
