Seguridad al ver

--- a/verCarrera.html
+++ b/verCarrera.html
@@ -74,8 +74,8 @@
         <div class="d-flex justify-content-center align-items-center">
             <div class="form-inline mb-2">
                 <label class="form-label text-input mr-3">Búsqueda por clave/nombre</label>
-                <input id="CarreraSel" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaCarreras">
-                <datalist id="listaCarreras">
+                <input id="CarreraSelVer" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaCarrerasVer">
+                <datalist id="listaCarrerasVer">
                 </datalist>
             </div>
         </div>
